<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp">


        <EditText
            android:id="@+id/editTextersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextAddressLine1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:ems="10"
            android:hint="@string/address_line_1"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/editTextAddressLine2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:ems="10"
            android:hint="@string/address_line_2"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/editTextLandmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:ems="10"
            android:hint="@string/landmark"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/editTextState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:ems="10"
            android:hint="@string/state"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/editTextPincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:ems="10"
            android:hint="@string/pincode"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/make_this_my_default_address" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:background="@mipmap/arrow_foreground"
            android:onClick="onClick" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>