<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progress_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="50dp">

            <ProgressBar
                android:id="@+id/pb_entry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="25dp"
                android:autofillHints="Name"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLength="20" />

            <EditText
                android:id="@+id/et_address_line1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="25dp"
                android:autofillHints="Address 1"
                android:hint="@string/address_line_1"
                android:inputType="textPostalAddress"
                android:maxLength="20" />

            <EditText
                android:id="@+id/et_address_line2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="25dp"
                android:autofillHints="Address 2"
                android:hint="@string/address_line_2"
                android:inputType="textPostalAddress"
                android:maxLength="20" />

            <EditText
                android:id="@+id/et_landmark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="25dp"
                android:autofillHints="Landmark"
                android:hint="@string/landmark"
                android:inputType="textPostalAddress"
                android:maxLength="20" />

            <EditText
                android:id="@+id/et_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="25dp"
                android:autofillHints="City"
                android:hint="@string/city"
                android:inputType="textPostalAddress"
                android:maxLength="20" />

            <EditText
                android:id="@+id/et_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="25dp"
                android:autofillHints="State"
                android:hint="@string/state"
                android:inputType="textPostalAddress"
                android:maxLength="20" />

            <EditText
                android:id="@+id/et_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="25dp"
                android:autofillHints="Pincode"
                android:hint="@string/pincode"
                android:inputType="number"
                android:maxLength="6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_default_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/make_this_my_default_address"
                    android:textSize="15sp" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/image_button_submit_entry"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_marginStart="150dp"
                android:background="@mipmap/arrow_foreground"
                android:contentDescription="@string/submit_button"
                android:onClick="onClick" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>
</FrameLayout>